# pal_face_detector_opencv

./: CMakeLists.txt  README.md
launch/: detector.launch
src/: face_detector.cpp
